# CoreCoin

./: .gitignore  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  README_DISTRIBUTION.md  SECURITY.md  configure.ac  corecoin.conf  explorer.py  generate_genesis.py  generate_genesis_fast.py  genesis_results.txt  genesis_results_clean.txt  genesis_results_utf8.txt  miner.cpp  requirements.txt  test_merkle.py  validate_new.py
.github/: ISSUE_TEMPLATE.md
build_msvc/: bitcoin_config.h  common.init.vcxproj
contrib/: README.md  install_db4.sh
contrib/qos/: tc.sh  (+1 more)
depends/: README.md  description.md
doc/: README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  reduce-traffic.md  release-notes-corecoin.md  release-process.md  tor.md  zmq.md
doc/man/: Makefile.am  corecoin-cli.1  corecoin-qt.1  corecoin-tx.1  corecoin-wallet.1  corecoind.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  fs.cpp  init.cpp  miner.cpp  netaddress.h  pow.cpp  txdb.cpp  validation.cpp  validation.h
test/: README.md  (+1 more)
(+232 files in other folders)
